--- a/app/templates/weather.html
+++ b/app/templates/weather.html
@@ -24,7 +24,7 @@
 <br>
 <br>
 <center>
-    <span class="zag">Погодные условия </span><span class="par">{{conditions}}</span><br>
+    <span class="zag">Погодные условия </span><span class="par">{{conditions}}</span> <img id="Picture" src='{{ url_for("static", filename=img ) }}' alt="Погода"> <br>
     <span class="zag">Температура </span><span class="par">{{temp}} &#176C</span>  <span class="zag">Температура.мин </span><span class="par">{{temp_min}} &#176C</span>  <span class="zag">Температура.мак </span><span class="par">{{temp_max}} &#176C</span> <br>
 </center>
 <br>
