--- a/app/static/css/style4.css
+++ b/app/static/css/style4.css
@@ -2,6 +2,45 @@ form{
 background-color: #555555;
 
 }
+#LK, #LK2{
+    border: none;
+    color: white;
+    padding: 11px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+	background-color: #555555;
+	border-radius: 12px;
+	border: 2px solid #ffffff;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-left: 10px;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+}
+
+#LK, #LK2 {
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+}
+
+#LK:hover {
+    background-color: #ffffff; 
+    color: #555555;
+}
+
+#LK:focus{
+outline: none;
+}
+
+#LK2:hover {
+    background-color: #ffffff; 
+    color: #555555;
+}
+
+#LK2:focus{
+outline: none;
+}
 
 input{
     border: none;
@@ -28,6 +67,7 @@ input {
 input:hover {
     background-color: #ffffff; 
     color: #555555;
+	border: 2px solid #555555;
 }
 
 input:focus{
